Fix pin direction.
This fix is based on experience and actual value of INPUT_EN in pinctrl source:
http://lxr.free-electrons.com/source/include/dt-bindings/pinctrl/am33xx.h

--- a/p9.html
+++ b/p9.html
@@ -90,7 +90,7 @@
 				if (document.getElementById("fast").checked == false){
 					decPinmux += 64;
 				}
-				if (document.getElementById("inputEnabled").checked == false){
+				if (document.getElementById("inputEnabled").checked == true){
 					decPinmux += 32;
 				}
 				if (document.getElementById("puporpdowndisabled").checked == false && document.getElementById("1").checked){
